--- a/index.html
+++ b/index.html
@@ -1,65 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <body>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BASILEIRÃO2025</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">RESULTADOS</a>
-            </li>
-             <li>
-                <a href="table.html">TABELA</a>
-            </li>
-            <li>
-                <a href="artillery.html">ARTILHARIA</a>
-            </li>
-        </ul>
-    </nav>
+    <title>Anotações</title>
+<link rel="stylesheet" href="index.css">
 
-    <header>
-        <div class="center"> 
-            <img src="./img/br.png.webp"
-        </div>
-    </header>
-    <h1>
-        RESULTADOS DA RODADA
-    </h1>
-    <h2>
-        Confira abaixo:
-    </h2>
-    <main>
-        <section>
-            <h3>Placares</h3>
-            <p>
-                SPORT 2X4 ATLÉTICO-MG|
-                VASCO 1X3 JUVENTUDE|
-                INTERNACIONAL 2X2 BAHIA|
-                SÃO PAULO 0X1 RED BULL BRAGANTINO|
-                VITÓRIA 0X0 BOTAFOGO|
-                CRUZEIRO 0X0 FLUMINENSE|
-                CORINTHIANS 0X1 CEARÁ|
-                FLAMENGO 3X2 SANTOS|
-                MIRASSOL 2X1 PALMEIRAS|
-                FORTALEZA 2X2 GRÊMIO
-            </p>
-        </section>
-         <section>
-            <h3>Posições</h3>
-            <p>
-              1- Palmeiras, 2- Flamengo, 3- Cruzeiro, 4- Mirassol, 5- Bahia, 6- Botafogo, 7- Fluminense, 8- São Paulo, 9- Atlético-MG, 10- Vasco, 11- Red Bull Bragantino, 12- Ceará, 13- Corinthians, 14- Grêmio, 15- Internacional, 16- Vitória, 17- Santos, 18- Juventude, !9- Fortaleza, 20- Sports.
-            </p>
-        </section>
-         <section>
-            <h3>Jogadores que marcaram</h3>
-            <p>
-                 Léo Pereira, Hulk, Rony, Alexsander, Rayan, Marcelo Hermes, Nenê, Ewerton, Vitor Naum, Willian José, Tiago, Jhon Jhon, Galeano, Léo Pereira, Carrascal, Bruno Henrique, Gabriel Bontempo, Lautaro Diaz, Gabriel, Vitor Roque, Joao Victor, Bareiro, Carlos, Marlon e Matheus Pereira.
-            </p>
-        </section>
-    </main>
+<div class="center">
+    <a href="annotations.html">anotações</a>
+</div>
+<h1>INTRODUÇÃO</h1>
 </body>
+<h2>
+    Abaixo você verá uma pequena introdução sobre o site:
+</h2>
+<p>
+    Esse site tem como objetivo permitir que você faça suas proprias anotações, seja elas pessoais ou profissionais, para começar a fazer suas anotações basta clicar em "anotações" logo acima dessa introdução.
+</p>
 </html>
